--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -380,7 +380,7 @@ CreatLeadScreen As screen:
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =24
 
-            HtmlText1 As htmlViewer:
+            htmltxtRequiredCL As htmlViewer:
                 AlignInContainer: =AlignInContainer.Stretch
                 Font: =Font.Arial
                 Height: =60
